--- a/automail.properties
+++ b/automail.properties
@@ -1,8 +1,16 @@
-###
-Seed=11111
-# Seed=11112 runs
-# Seed=11113 fails
-# Seed=22222 fails
-###
-#MailPool=strategies.SimpleMailPool
- MailPool=strategies.MyMailPool
+# Seed
+Seed=1234
+# MailPool
+# MailPool=strategies.SimpleMailPool
+MailPool=strategies.MyMailPool
+# Floors
+Floors=10
+# Fragile
+Fragile=false
+# Fragile=true
+# Mail_To_Create
+Mail_to_Create=200
+# Last_Delivery_Time
+Last_Delivery_Time=120
+# Robots
+Robots=Standard,Standard,Standard
